--- a/css/styles.css
+++ b/css/styles.css
@@ -60,7 +60,7 @@ body{
 }
 
 .banner-text{
-    background-color: black;
+    background-color: #2B2B2A;
     height: 100px;
     width: 200px;
     color: #FFFFFF;
