--- a/css/styles.css
+++ b/css/styles.css
@@ -49,29 +49,32 @@ body{
 }
 
 .banner{
-    widows: 100%;
-    height: 1000px;
+    width: 100%;
+    height: 500px;
     position: relative;
-    margin-top: 52px;
+    margin-top: 59px;
 }
 .banner-img{
     width:100%;
-    height: 1000px;
+    height: 500px;
 }
 
 .banner-text{
-    background-color: #2B2B2A;
+    /* background-color: #2B2B2A; */
     height: 100px;
-    width: 200px;
+    width: 300px;
     color: #FFFFFF;
     position: absolute;
-    top: 375px;
-    left: 42%;
+    top: 160px;
+    left: 33%;
     text-align: center;
     font-family: 'Josefin Sans', sans-serif;
-    text-shadow: lightslategrey 2px 2px;
-    box-shadow: lightslategrey 2px 2px;
-    border-radius: 5px;
+    font-size: 62px;
+    text-transform: none;
+    white-space: nowrap;
+    /* text-shadow: lightslategrey 2px 2px;
+    box-shadow: lightslategrey 2px 2px; */
+    /* border-radius: 5px; */
 }
 
 .banner h1{
@@ -87,10 +90,20 @@ body{
 
 .col{
     height: 500px;
-    width:49%;
+    width:45%;
     float: left;
     margin-left:12px;
-    
+    border: 3px solid black;
+    position: relative;
+}
+
+.col1{
+    height: 500px;
+    width:10opx;
+    float: left;
+    margin-left:;
+    border: 3px solid black;
+    position: relative;
 }
 
 .main-text{
@@ -99,9 +112,14 @@ body{
     }
 
 .main-img{
+    height:100px;
+    width: 100px;
     display: block;
-    margin: auto;
+    margin-left: 300px;
+    margin-right: auto;
+    /* width: 50%; */
 }
+
 
 .footer{
     height:60px;
@@ -137,21 +155,34 @@ body{
 /*******End of Index Styles***********/
 
 /******** About Styles *************/
-
+.about-text{
+    height: 100px;
+    width: 300px;
+    color: #E51B4C;
+    position: absolute;
+    display: block;
+    top: 69px;
+    left: 25%;
+    text-align: center;
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 30px;
+    text-transform: none;
+    white-space: nowrap;
+}
 .col-container{
     height:800px;
     width: 100%;
-    margin-top: 200px;
+    margin-top: 170px;
     margin-bottom: 20px;
 }
 
 .columns{
-    width: 28%;
+    width: 30%;
     height: 650px;
-    border: 3px solid #2B2B2A;
+    border: 3px #2B2B2A;
     float: left;
-    padding: 25px 20px;
-    margin-left: 20px;
+    padding: 15px 10px;
+    margin-left: 30px;
     overflow: hidden;
 }
 
