--- a/css/styles.css
+++ b/css/styles.css
@@ -49,29 +49,32 @@ body{
 }
 
 .banner{
-    widows: 100%;
-    height: 1000px;
+    width: 100%;
+    height: 500px;
     position: relative;
-    margin-top: 52px;
+    margin-top: 59px;
 }
 .banner-img{
     width:100%;
-    height: 1000px;
+    height: 500px;
 }
 
 .banner-text{
-    background-color: #2B2B2A;
+    /* background-color: #2B2B2A; */
     height: 100px;
-    width: 200px;
+    width: 300px;
     color: #FFFFFF;
     position: absolute;
-    top: 375px;
-    left: 42%;
+    top: 160px;
+    left: 25%;
     text-align: center;
     font-family: 'Josefin Sans', sans-serif;
-    text-shadow: lightslategrey 2px 2px;
-    box-shadow: lightslategrey 2px 2px;
-    border-radius: 5px;
+    font-size: 62px;
+    text-transform: none;
+    white-space: nowrap;
+    /* text-shadow: lightslategrey 2px 2px;
+    box-shadow: lightslategrey 2px 2px; */
+    /* border-radius: 5px; */
 }
 
 .banner h1{
@@ -79,28 +82,46 @@ body{
 }
 
 .main-section{
-    height: 600px;
+    height: 550px;
     width: 100%;
     position:relative;
-
+    margin-left: 32%;
+    margin-top: 
+    text-align: center;
 }
 
 .col{
     height: 500px;
-    width:49%;
-    float: left;
-    margin-left:12px;
-    
+    width:32%;
+    margin-left: 0 auto;
+    margin-right: 0 auto;
+    border: 3px black;
+    position: relative;
+    text-align: center;
 }
 
-.main-text{
-    margin-top: 50px;
-    text-align: center;
-    }
+.spoiler{
+    height: 300px;
+    margin-left: auto;
+}
 
-.main-img{
-    display: block;
-    margin: auto;
+
+h2{
+    color: #2B2B2A;
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 30px;
+}
+
+h3{
+    color: #2B2B2A;
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 25px;  
+}
+
+p1{
+    color: #2B2B2A;
+    font-family: 'Josefin Sans', sans-serif;
+    text-align: center;
 }
 
 .footer{
@@ -134,23 +155,42 @@ body{
     color: #1da1f2;
     }
 
+.social a:hover{
+    background-color: lightgray;
+    z-index: 2;
+    }
+    
+
 /*******End of Index Styles***********/
 
 /******** About Styles *************/
-
+.about-text{
+    height: 100px;
+    width: 300px;
+    color: #2B2B2A;
+    position: absolute;
+    display: block;
+    top: 69px;
+    left: 18%;
+    text-align: center;
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 30px;
+    text-transform: none;
+    white-space: nowrap;
+}
 .col-container{
-    height:800px;
+    height:650px;
     width: 100%;
-    margin-top: 200px;
+    margin-top: 170px;
     margin-bottom: 20px;
 }
 
 .columns{
-    width: 28%;
+    width: 30%;
     height: 650px;
-    border: 3px solid #2B2B2A;
+    border: 3px #2B2B2A;
     float: left;
-    padding: 25px 20px;
+    padding: 15px 10px;
     margin-left: 20px;
     overflow: hidden;
 }
@@ -162,9 +202,21 @@ body{
     margin: auto;
 }
 
+p2{
+    text-decoration: none;
+}
+
 .audio-col{
     display: block;
-    margin: auto;
+    margin-top: 120px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.audio{
+    display: block;
+    margin-top: 125px;
+    text-align: center;
 }
 
 .col-video{
@@ -178,29 +230,47 @@ body{
 /*******Contact Styles*********/
 
 .contact-header{
-    background-color: #2B2B2A;
+    height: 100px;
+    width: 200px;
+    color: #2B2B2A;
+    /* position: absolute; */
+    margin-top: 80px;
+    margin-left: 32%;
+    text-align: center;
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 69px;
+    text-transform: none;
+    white-space: nowrap;
+    /* background-color: #2B2B2A;
     height: 100px;
     width: 200px;
     color: #FFFFFF;
     /* position: absolute; */
     /* top: 60px; */
-    margin: auto;
+    /* margin: auto;
     margin-top: 70px;
     text-align: center;
     font-family: 'Josefin Sans', sans-serif;
     text-shadow: lightslategrey 2px 2px;
     box-shadow: lightslategrey 2px 2px;
-    border-radius: 5px;
+    border-radius: 5px; */ */
 }
 
 .container{
-    height: 550px;
+    height: 800px;
     width: 100%;
-    margin-top: 250px;
+    margin-top: 5px;
+    margin-left: 5%;
+    margin-right: auto;
 }
 
 .contact-col{
     float: left;
-    margin-left: 50px;
+    margin-left: 10px;
+    margin-right: auto;
    
+}
+
+.map{
+    margin-top:50px;
 }
